# mcp_file_system

./: Makefile  README.md  TODO.md  main.py  pyproject.toml  test_server.py
src/: main.py
